fix overflow

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -35,9 +35,6 @@
 }
 
 @media (min-width: 640px) {
-    .menuToggle {
-            display: none;
-    }
 
     .navList {
         display: flex;
