--- a/styles/global.css
+++ b/styles/global.css
@@ -168,8 +168,4 @@ footer {
         font-size: 1.3rem;
     }
 
-    .container {
-        grid-template-rows: repeat(4, 1fr);
-    }
-
 }
