--- a/styles/project.module.css
+++ b/styles/project.module.css
@@ -1,10 +1,4 @@
-.cardsContainer {
-    margin: 0 2rem;
-    
-}
-
 .title {
     grid-column: 1 / 4;
-    grid-row: 1 / 2;
     justify-self: center;
 }
